# interop

./: .cruft.json  .gitignore  CHANGELOG.md  CONTRIBUTING.rst  README.md  README.rst  conda-lock.yml  dockerfile  pyproject.toml
.azure/: .pypirc  ci-cd.yml  detect_release.py  edit_cruft.py  setup_conda_temp.yml  setup_poetry_temp.yml
.github/workflows/: cd.yml  ci.yml
dev/: activate  build_image.sh
docs/: Makefile  conf.py  index.rst  installation.rst
interop/: __init__.py  version.py
interop/backend/: compute.py
interop/common/: __init__.py  components.py
interop/components/: __init__.py  component_generic.py  component_ray.py  component_root.py
interop/frontend/: app.py  meta.py  plot.py  st_ray.py
interop/frontend/.streamlit/: config.toml
interop/frontend/pages/: 1_compute.py  2_theory.py
interop/models/: __init__.py  data.py  proc.py  req.py  root.py
interop/tests/: test_components.py  test_data.py  test_execute.py  test_misc.py  test_parallel.py  test_ray.py  test_req.py  test_sanity.py  test_version.py
interop/utils/: __init__.py  data.py  decorators.py  dtypes.py  execute.py  misc.py  parallel.py  ray.py  serialization.py
junit/: test-results.xml
